--- a/_config.yml
+++ b/_config.yml
@@ -124,8 +124,8 @@ author:
       icon: "fab fa-fw fa-github"
       url: "https://github.com/ngntrgduc"
     - label: "LinkedIn"
-      icon: "fab fa-brands fa-linkedin"
-      url: "https://instagram.com/"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/ducnguyen1511/"
 
 # Site Footer
 footer:
@@ -206,7 +206,7 @@ kramdown:
   toc_levels: 1..6
   smart_quotes: lsquo,rsquo,ldquo,rdquo
   enable_coderay: false
-
+  math_engine: katex
 
 # Sass/SCSS
 sass:
