--- a/_config.yml
+++ b/_config.yml
@@ -18,15 +18,15 @@ minimal_mistakes_skin    : "air" # "air", "aqua", "contrast", "dark", "dirt", "n
 locale                   : "en-US"
 title                    : "<Duc Nguyen>"
 title_separator          : "-"
-subtitle                 : "A freshman at VNUHCM - University"
+subtitle                 : # "A freshman at VNUHCM - University"
 name                     : "Nguyễn Trung Đức"
-description              : "A freshman at VNUHCM - University"
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+description              : "A freshman at VNUHCM - University of Science"
+url                      : "https://ngntrgduc.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "ngntrgduc/ngntrgduc.github.io" # GitHub username/repo-name e.g. 
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title           : "ngntrgduc's blog"# overrides the website title displayed in the masthead, use " " for no title
+logo                     : "/assets/images/pikachu.jpg" # path of logo image to display in the masthead, e.g. 
+masthead_title           : "ngntrgduc's blog" # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
@@ -81,7 +81,7 @@ baidu_site_verification  :
 twitter:
   username               :
 facebook:
-  username               : "nguyenduc1511"
+  username               : 
   app_id                 :
   publisher              :
 og_image                 : # Open Graph/Twitter default site image
@@ -141,12 +141,6 @@ footer:
       url: "https://github.com/ngntrgduc"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
-      # url:
-    - label: "Bitbucket"
-      icon: "fab fa-fw fa-bitbucket"
-      # url:
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
       # url:
 
 
