--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ analytics:
 # Site Author
 author:
   name             : "Nguyễn Trung Đức"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : /assets/images/pikachu.jpg"
   bio              : "A freshman at VNUHCM - University of Science"
   location         : "TP.HCM"
   email            :
@@ -282,3 +282,4 @@ defaults:
       comments: # true
       share: true
       related: true
+      math_engine: katex
