--- a/_config.yml
+++ b/_config.yml
@@ -130,20 +130,20 @@ author:
 # Site Footer
 footer:
   links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
+    # - label: "Twitter"
+      # icon: "fab fa-fw fa-twitter-square"
       # url:
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
+    # - label: "Facebook"
+      # icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/nguyenduc1511"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
+    # - label: "GitHub"
+      # icon: "fab fa-fw fa-github"
       # url: "https://github.com/ngntrgduc"
-    - label: "GitLab"
-      icon: "fab fa-fw fa-gitlab"
+    # - label: "GitLab"
+      # icon: "fab fa-fw fa-gitlab"
       # url:
-    - label: "LinkedIn"
-      icon: "fab fa-fw fa-linkedin"
+    # - label: "LinkedIn"
+      # icon: "fab fa-fw fa-linkedin"
       # url: "https://www.linkedin.com/in/ducnguyen1511/"
 
 # Reading Files
