--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ minimal_mistakes_skin    : "air" # "air", "aqua", "contrast", "dark", "dirt", "n
 
 # Site Settings
 locale                   : "en-US"
-title                    : "<Duc Nguyen>"
-title_separator          : ""
+title                    : "ngntrgduc's blog"
+title_separator          : "-"
 subtitle                 : # "A freshman at VNUHCM - University"
 name                     : "Nguyễn Trung Đức"
 description              : "A freshman at VNUHCM - University of Science"
