--- a/_config.yml
+++ b/_config.yml
@@ -59,9 +59,9 @@ reCaptcha:
 atom_feed:
   path                   : # blank (default) uses feed.xml
   hide                   : true # true, false (default)
-search                   : true # true, false (default)
+search                   : # true, false (default)
 search_full_content      : # true, false (default)
-search_provider          : google # lunr (default), algolia, google
+search_provider          : # lunr (default), algolia, google
 algolia:
   application_id         : # YOUR_APPLICATION_ID
   index_name             : # YOUR_INDEX_NAME
@@ -289,8 +289,15 @@ defaults:
       show_date: true
       excerpt: ""
 
-include: ["_pages"]
-defaults:
+  # _portfolio
+  - scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: single
+      author_profile: false
+      share: true
+
   # _pages
   - scope:
       path: ""
@@ -299,18 +306,10 @@ defaults:
       layout: single
       author_profile: true
 
-# Portfolio settings
 collections:
   portfolio:
     output: true
     permalink: /:collection/:path/
 
-defaults:
-# _portfolio
-- scope:
-  path: ""
-  type: portfolio
-values:
-  layout: single
-  author_profile: false
-  share: true
+
+include: ["_pages"]
