--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
     url: /about/
   - title: "Portfolio"
     url: /portfolio/
-  # - title: "Sample Collections"
+  - title: "My CV"
   #   url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
