--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,11 +2,11 @@
 main:
 #   - title: "Quick-Start Guide"
 #     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  - title: "About"
-    url: /about/
-  - title: "Portfolio"
-    url: /portfolio/
-  - title: "My CV"
-    url: /my-resume/
+#   - title: "About"
+#     url: /about/
+#   - title: "Portfolio"
+#     url: /portfolio/
+#   - title: "My CV"
+#     url: /my-resume/
 #   - title: "Resources"
 #     url: /my-docs/docs/intro/
