--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ url                      : "https://ngntrgduc.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : #"ngntrgduc/ngntrgduc.github.io" # GitHub username/repo-name e.g. 
 teaser                   : "/assets/images/pikachu.jpg" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/assets/images/pikachu.jpg" # path of logo image to display in the masthead, e.g. 
+logo                     : # path of logo image to display in the masthead, e.g. 
 masthead_title           : "ngntrgduc's blog" # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -103,8 +103,8 @@ analytics:
 # Site Author
 author:
   name             : "Nguyễn Trung Đức"
-  avatar           : "/assets/images/pikachu.jpg"
-  bio              : "A freshman at VNUHCM - University of Science"
+  avatar           : /assets/images/pikachu.jpg
+  bio              : "A lazy pig at VNUHCM - University of Science ( ´(00)ˋ )"
   location         : "TP.HCM"
   email            :
   links:
