--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ analytics:
 author:
   name             : "Nguyễn Trung Đức"
   avatar           : /assets/images/pikachu.jpg
-  bio              : "A lazy pig at VNUHCM - University of Science ( ´(00)ˋ )"
+  bio              : "A lazy pig at VNUHCM - University of Science :3"
   location         : "TP.HCM"
   email            :
   links:
