--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,4 +9,4 @@ main:
   - title: "My CV"
     url: /my-resume/
   - title: "Resources"
-    url: /my-docs/
+    url: https://github.com/ngntrgduc/my-docs
