--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ analytics:
 author:
   name             : "Nguyễn Trung Đức"
   avatar           : /assets/images/pikachu.jpg
-  bio              : "A lazy pig at University of Science - VNUHCM :3"
+  bio              : "Sipping coffee, making bug"
   location         : "TP.HCM"
   email            :
   links:
