--- a/_config.yml
+++ b/_config.yml
@@ -114,9 +114,6 @@ author:
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       url: "https://facebook.com/nguyenduc1511"
@@ -125,7 +122,7 @@ author:
       url: "https://github.com/ngntrgduc"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
-      url: "https://www.linkedin.com/in/ducnguyen1511/"
+      url: "https://www.linkedin.com/in/ngntrgduc/"
 
 # Site Footer
 footer:
