--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ url                      : "https://ngntrgduc.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : #"ngntrgduc/ngntrgduc.github.io" # GitHub username/repo-name e.g. 
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : # path of logo image to display in the masthead, e.g. 
+logo                     : /assets/images/pikachu.jpg # path of logo image to display in the masthead, e.g. 
 masthead_title           : "ngntrgduc's blog" # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
