--- a/_config.yml
+++ b/_config.yml
@@ -127,21 +127,6 @@ author:
 # Site Footer
 footer:
   links:
-    # - label: "Twitter"
-      # icon: "fab fa-fw fa-twitter-square"
-      # url:
-    # - label: "Facebook"
-      # icon: "fab fa-fw fa-facebook-square"
-      # url: "https://facebook.com/nguyenduc1511"
-    # - label: "GitHub"
-      # icon: "fab fa-fw fa-github"
-      # url: "https://github.com/ngntrgduc"
-    # - label: "GitLab"
-      # icon: "fab fa-fw fa-gitlab"
-      # url:
-    # - label: "LinkedIn"
-      # icon: "fab fa-fw fa-linkedin"
-      # url: "https://www.linkedin.com/in/ducnguyen1511/"
 
 # Reading Files
 include:
@@ -287,10 +272,10 @@ defaults:
       excerpt: ""
       mathjax: true
 
-  # _portfolio
+  # _projects
   - scope:
       path: ""
-      type: portfolio
+      type: projects
     values:
       layout: single
       author_profile: false
@@ -304,7 +289,7 @@ defaults:
       author_profile: true
 
 collections:
-  portfolio:
+  projects:
     output: true
     permalink: /:collection/:path/
 
