--- a/_config.yml
+++ b/_config.yml
@@ -123,6 +123,9 @@ author:
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/ngntrgduc/"
+    - label: "Coffe"
+      icon: "fas fa-mug-saucer fa-shake"
+      url: "https://ko-fi.com/ngntrgduc"
 
 # Site Footer
 footer:
