--- a/_config.yml
+++ b/_config.yml
@@ -123,8 +123,8 @@ author:
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/ngntrgduc/"
-    - label: "Coffe"
-      icon: "fas fa-mug-saucer fa-shake"
+    - label: "Buy me a coffee"
+      icon: "fas fa-mug-saucer"
       url: "https://ko-fi.com/ngntrgduc"
 
 # Site Footer
